<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <include layout="@layout/toolbar_base" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_grey_800"
        android:padding="@dimen/dp_15">

        <com.reversecoder.library.segmentradiogroup.SegmentedRadioGroup
            android:id="@+id/srg_flavor_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="1dp"
            segmentedgroup:sc_corner_radius="0dp"
            segmentedgroup:sc_tint_color="@color/colorPrimaryDark">

            <RadioButton
                android:id="@+id/srg_rbtn_user"
                style="@style/SegmentedRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:checked="true"
                android:text="@string/view_user" />

            <RadioButton
                android:id="@+id/srg_rbtn_kitchen"
                style="@style/SegmentedRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:text="@string/view_kitchen" />

            <RadioButton
                android:id="@+id/srg_rbtn_driver"
                style="@style/SegmentedRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:text="@string/view_driver" />

        </com.reversecoder.library.segmentradiogroup.SegmentedRadioGroup>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_grey_800">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_grey_800"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_30"
                android:text="@string/view_scan_qr_code_to_download_the_app"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_qr_code"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/dp_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/view_or"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tv_play_store_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/sp_20" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>